--- a/index.html
+++ b/index.html
@@ -594,16 +594,16 @@
         <p class="result-capshen">پا درد ناشی از آرتروز مفصل لگن، عامل از کارافتادگی بسیاری از بیماران است. این بیماران که قبل از جراحی، برای انجام کارهای ساده و روزمره دچار مشکل هستند، بعد از تعویض مفصل از نتیجه جراحی شگفت‌زده می‌شوند؛ جراحی تعویض مفصل لگن نه تنها باعث درمان کامل پا درد بلافاصله بعد از جراحی می‌شود، بلکه بیمار را از معلولیت و صندلی چرخدار نیز خلاص می‌کند. بعد از گذراندن دوره کامل فیزیوتراپی، بیماران می‌توانند بدون احساس درد و خستگی، هر چه قدر دلشان می‌خواهد راه بروند و بدون محدودیت به فعالیت‌های مورد علاقه‌ خود بپردازند. رعایت برخی احتیاط‌ها و محدودیت‌های جزیی بعد از جراحی تعویض مفصل لگن، به افزایش طول عمر مفصل تعویض شده کمک می‌کند. شما می‌توانید با رعایت محدودیت‌ها و توصیه‌های لازم بعد از جراحی تعویض مفصل، در روند بهبودی خود سهیم باشید.</p>
 
 
-      <div class="row text-center text-md-end">
-        <div class="col">
+      <div class="row">
+        <div class="col-9 mx-auto col-md-6 col-xl-4 ">
           <span class="mb-3 d-inline-block text-nowrap tik-text"> <img class="ms-3" src="image/icon/tik.png" alt="">کیفیت زندگی بعد از تعویض مفصل لگن</span><br>
           <span class="mb-3 d-inline-block text-nowrap tik-text">  <img class="ms-3" src="image/icon/tik.png" alt="">میزان موفقیت جراحی تعویض مفصل لگن</span>
         </div>
-        <div class="col">
+        <div class="col-9 mx-auto col-md-6 col-xl-4 ">
           <span class="mb-3 d-inline-block text-nowrap tik-text">  <img class="ms-3" src="image/icon/tik.png" alt="">رانندگی پس از جراحی تعویض مفصل لگن</span><br>
           <span class="mb-3 d-inline-block text-nowrap tik-text">  <img class="ms-3" src="image/icon/tik.png" alt="">تعویض مفصل لگن و تأثیر آن بر روابط جنسی</span>
         </div>
-        <div class="col mt-md-4 mt-lg-0">
+        <div class="col-9 mx-auto col-md-12 col-xl-4 mt-md-4 mt-xl-0">
           <span class="mb-3 d-inline-block text-nowrap tik-text">  <img class="ms-3" src="image/icon/tik.png" alt="">کیفیت زندگی بعد از تعویض مفصل لگن</span><br>
           <span class="mb-3 d-inline-block text-nowrap tik-text">  <img class="ms-3" src="image/icon/tik.png" alt="">میزان موفقیت جراحی تعویض مفصل لگن</span>
         </div>
@@ -619,28 +619,139 @@
       <div class="line d-inline-block"></div>
     </div>
 
-    <div class="faq w-100 bg-success position-relative">
+    <div class="faq w-100 p-3 bg-success position-relative">
 
 
-      <a href="#demo" class="d-block fs-5 p-4 pb-0 mt-2 text-decoration-none text-white collapsed" data-bs-toggle="collapse">• بهترین سن جراحی تعویض مفصل چه زمانی است؟</a>
-      <div id="demo" class="collapse text-white p-4 fs-5">
-        جراحی تعویض مفصل ران موفق‌ترین جراحی قرن 21 محسوب می‌شود و هیچ محدودیت سنی و یا وزنی برای این جراحی وجو ندارد، بطوریکه از سن 16 الی 100 سالگی می‌توان این جراحی را با موفقیت انجام داد.</div>
+      <a href="#collapseOne" class="d-block fs-5 p-4 pb-0 mt-2 text-decoration-none text-white " data-bs-toggle="collapse">• بهترین سن جراحی تعویض مفصل چه زمانی است؟</a>
+      <div id="collapseOne" class="collapse text-white p-4 fs-5 show"> جراحی تعویض مفصل ران موفق‌ترین جراحی قرن 21 محسوب می‌شود و هیچ محدودیت سنی و یا وزنی برای این جراحی وجو ندارد، بطوریکه از سن 16 الی 100 سالگی می‌توان این جراحی را با موفقیت انجام داد.</div>
 
-      <hr>
+      <hr class="faq-line">
 
+      <a href="#collapseTwo" class="d-block fs-5 p-4 pb-0 mt-2 text-decoration-none text-white collapsed" data-bs-toggle="collapse">• تاخیر در تشخیص، درمان و جراحی مفصل لگن یا زانو چه عوارضی به همراه دارد؟</a>
+      <div id="collapseTwo" class="collapse text-white p-4 fs-5">تاخیر در تشخیص، درمان و جراحی باعث آسیب به مفاصل اطراف، درد و رنج، کاهش محسوس کیفیت زندگی، محدودیت حرکتی، کوتاهی اندام و عضلات و ... خواهد شد، بنابراین تاخیر در جراحی تعویض مفصل علاوه بر اینکه نیاز به این جراحی در بیمار را تغییر نمی‌دهد بلکه با آسیب رساندن به سایر مفاصل، مشکلات بی‌شماری را برای بیمار به وجود می‌آورد.</div>
 
-
-      <a href="#demo2" class="d-block fs-5 p-4 pb-0 mt-2 text-decoration-none text-white collapsed" data-bs-toggle="collapse">• بهترین سن جراحی تعویض مفصل چه زمانی است؟</a>
-      <div id="demo2" class="collapse text-white p-4 fs-5">
-        جراحی تعویض مفصل ران موفق‌ترین جراحی قرن 21 محسوب می‌شود و هیچ محدودیت سنی و یا وزنی برای این جراحی وجو ندارد، بطوریکه از سن 16 الی 100 سالگی می‌توان این جراحی را با موفقیت انجام داد.</div>
-
-
-
-
-    </divc>
+      <hr class="faq-line">
+  
+      <a href="#collapseThree" class="d-block fs-5 p-4 pb-0 mt-2 text-decoration-none text-white collapsed" data-bs-toggle="collapse">• پس از جراحی تعویض مفصل چه محدودیت‌هایی خواهم داشت؟</a>
+      <div id="collapseThree" class="collapse text-white p-4 fs-5">پس از جراحی تعویض مفصل نه تنها هیچ محدودیتی وجود نخواهد داشت بلکه حس زیبای زندگی جدید را هم لمس خواهید کرد. بطوریکه از هفته دوم پس از جراحی می‌توانید رانندگی را ادامه دهید یا به محل کار خود بازگردید و پس از شش‌ماه تا یک‌سال می‌توانید بر روی زمین بنشینید و ورزش‌های خود را مجددا شروع کنید.</div>
+  
+      <hr class="faq-line">
+  
+      <a href="#collapseFour" class="d-block fs-5 p-4 pb-0 mt-2 text-decoration-none text-white collapsed" data-bs-toggle="collapse">• مدت زمان بهبودی پس از جراحی تعویض مفصل ران چقدر است؟</a>
+      <div id="collapseFour" class="collapse text-white p-4 fs-5">زمان بهبودی پس از جراحی تعویض مفصل بسته به علت جراحی دارد، اگر بیماری به موقع و بعلت مشکلات شناخته شده(غیر از دررفتگی مادرزادی) جراحی شود در عرض یک الی سه ماه به زندگی عادی و نرمال خود برمی‌گردد، برای دررفتگی مادرزادی این زمان به دو الی شش ماه خواهد رسید که دلیل آن هم مختصات خاص مفصل در دررفتگی‌های مادرزادی است.</div>
+  
+      <hr class="faq-line">
+  
+      <a href="#collapseFive" class="d-block fs-5 p-4 pb-0 mt-2 text-decoration-none text-white collapsed" data-bs-toggle="collapse">• طول عمر پروتز(ایمپلنت) مفصل ران چند سال است؟</a>
+      <div id="collapseFive" class="collapse text-white p-4 fs-5">طول عمر پروتز یا ایمپلنت‌های مفصل ران حدود سه دهه است که وابسته به عواملی چون کیفیت پروتز، جنس پروتز، تجربه و تکنیک جراح، بیمارستان و ... می‌باشد. از دهه‌ی سوم به بعد خردگی مفصل به آرامی آغاز می‌شود که پس از آن سه الی چهار مرتبه می‌توان مفصل را تعویض و یا جایگزین کرد.</div>
+  
+      <hr class="faq-line">
+  
+      <a href="#collapseSix" class="d-block fs-5 p-4 pb-0 mt-2 text-decoration-none text-white collapsed" data-bs-toggle="collapse">• آیا کوتاهی پا، اندام و لنگش پس از جراحی تعویض مفصل برطرف خواهد شد؟</a>
+      <div id="collapseSix" class="collapse text-white p-4 fs-5">جراحی تعویض مفصل ران قادر به رفع کوتاهی پا و حتی کوتاهی‌های شدید(10 الی 12 سانتی‌متر در دررفتگی مادرزادی) خواهد بود که پس از جراحی تعویض مفصل ران برطرف خواهد شد. لنگش علاوه بر جراحی تعویض مفصل به قدرت عضلات اطراف مفصل شخص نیز وابسته است که اصولا پس از این جراحی، لنگش مشاهده نمی‌گردد.</div>
+  
+      <hr class="faq-line">
+  
+      <a href="#collapseSeven" class="d-block fs-5 p-4 pb-0 mt-2 text-decoration-none text-white collapsed" data-bs-toggle="collapse">• هزینه جراحی تعویض مفصل ران یا زانو چقدر است؟</a>
+      <div id="collapseSeven" class="collapse text-white p-4 fs-5">هزینه جراحی تعویض مفصل به فاکتورهای متعدد و مهمی وابسته است. عواملی مانند نوع تخریب، شدت تخریب، وضعیت استخوان‌ها، جنس پروتز، کیفیت پروتز، بیمارستان، تیم جراحی و ... بنابراین هر بیمار در مورد اطلاع از هزینه‌های جراحی تعویض مفصل میبایست با پزشک خود در ارتباط باشد.</div>
+     
+      <hr class="faq-line">
+    </div>
 
 
   </div>
+  <!-- map -->
+  <div class="w-100 position-relative map" style="height: 200px; margin-top: 40px;">
+
+<img src="image/icon/map.png" alt="" class="img-map position-absolute w-100" style="left: 0; bottom: -2px; height: 70%;">
+  </div>
+  <!-- footer -->
+  <footer>
+    <div class="container">
+      <div class="row justify-content-center justify-content-xl-between">
+
+      <div class="col-12 text-center text-md-end col-md-4 col-xl-2 ">
+        <img src="image/logo.png" alt="">
+        <p class="adres">تهران، سعادت آباد، میدان کاج، سرو غربی، نرسیده به چهارراه شهرداری، پلاک 45​​​​​​​ طبقه دوم</p>
+
+        <div class="number">
+        <p class="d-inline-block">(021) 22 11 4700</p>
+        <p class="d-inline-block">|</p>
+        <p class="d-inline-block">(021) 22 11 4300</p>
+        </div>
+
+        <div class="number">
+          <p class="d-inline-block">۰۹۱۲ ۸۸۹ ۹۲۲۵</p>
+          <p class="d-inline-block">|</p>
+          <p class="d-inline-block">0912 940 5676</p>
+          <p class="d-inline-block">(پاسخگویی حتی در ایام تعطیل)</p>
+        </div>
+        <p style="color:#444444;">contact@drtaheriazam.com</p>
+        <p style="color:#444444;">dr.taheriazam@gmail.com</p>
+      </div>
+
+      <div class="col-6 text-center text-md-end col-md-4 col-xl-2 ">
+        <h4 class="my-4 fw-bold text-success">خدمات ما</h4>
+        <div class="text-secondary">
+          <p>جراحی زانو</p>
+          <p>درمان شکستگی ران</p>
+          <p>تعویض مجدد مفصل لگن</p>
+          <p>تعویض مفصل لگن</p>
+        </div>
+      </div>
+
+      <div class="col-6 text-center text-md-end col-md-4 col-xl-2 ">
+        <h4 class="my-4 fw-bold text-success">خدمات ما</h4>
+        <div class="text-secondary">
+          <p>تومورهای استخوانی</p>
+          <p>تعویض مفصل زانو</p>
+          <p>سیاه شدگی سر استخوان ران</p>
+        </div>
+      </div>
+      
+      <div class="col-6 text-center text-md-end col-md-5 col-xl-2 ">
+        <h4 class="my-4 fw-bold text-success">منوی سایت</h4>
+        <div class="text-secondary">
+          <p>ویدیوهای آپارات</p>
+          <p>اخبار و مقالات</p>
+          <p>تجربه بیماران</p>
+          <p>تالیفات</p>
+          <p>تماس با ما</p>
+          <p>درباره ما</p>
+        </div>
+      </div>
+
+      <div class="col-6 text-center text-md-end col-md-5 col-xl-2 ">
+        <h4 class="my-4 fw-bold text-success">تایم کاری</h4>
+        <div class="text-secondary day">
+          <p>شنبه تا سه شنبه : 18 الی 24</p>
+          <hr>
+          <p>پنج شنبه ها : 14 الی 20</p>
+          <hr>
+          <p>چهارشنبه‌ها، جمعه‌ها و تعطیلات رسمی : تعطیل</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  </footer>
+  <!-- Social Media -->
+  <footer style="background-color: rgb(230, 230, 230);">
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-12 col-xl-6 mb-2 mb-xl-0 fs-6 text-center text-xl-end text-secondary">
+          © تمام حقوق این سایت متعلق به دکتر افشین طاهری اعظم می‌باشد. 1401 - 1395   
+        </div>
+        <div class="col-12 col-xl-6 text-center text-xl-start">
+          <img class="mx-2" src="image/icon/aparat.footer.png" alt="">
+          <img class="mx-2" src="image/icon/telegram-footer.png" alt="">
+          <img class="mx-2" src="image/icon/youtyub-footer.png" alt="">
+          <img class="mx-2" src="image/icon/instagram-footer.png" alt="">
+        </div>
+      </div>
+
+    </div>
+  </footer>
 
     <script src="scripts/jquery.js"></script>
     <script src="scripts/bootstrap.bundle.min.js"></script>
